crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_041.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214229
    entity_type: Vehicle
    position:
      x: -560.0001831054688
      y: 0
      z: 450.00030517578125
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 3
            - 8
            - 19
            - 20
            - 21
            - 23
            - 25
          - []
          - []
          - []
        paramsId: 4293043664
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 69900
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 69900
      maxServerSpeedRaw: 950953
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214228
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 181
        - 30
        - 249
        - 51
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 45
        - 12
        - 199
        - 208
        - 173
        - 175
        - 199
        - 0
        - 0
        - 0
        - 0
        - 208
        - 173
        - 6
        - 199
        - 208
        - 173
        - 13
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 162
        - 251
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 114
        - 254
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 34
        - 255
        - 8
        - 0
        - 0
        - 0
        - 176
        - 111
        - 29
        - 255
        - 176
        - 111
        - 125
        - 255
        - 176
        - 111
        - 238
        - 255
        - 176
        - 111
        - 45
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 120
        - 248
        - 176
        - 111
        - 141
        - 255
        - 176
        - 111
        - 253
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 66
        - 255
        - 176
        - 159
        - 178
        - 254
        - 176
        - 159
        - 82
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 237
        - 221
        - 4
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 62
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4607
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4607
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 438
    vehicle_id: 7162
