crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_047.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 44
payload:
  PlayerOrientation:
    parent_id: 0
    pid: 1214225
    position:
      x: -600
      y: 0
      z: 400
    rotation:
      pitch: 0
      roll: 0
      yaw: 3.1415927410125732
