crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_048.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 756501
    entity_type: InteractiveZone
    position:
      x: -530
      y: 0
      z: 0
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 60
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 1
          isVisible: 1
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 0
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 49
        - 70
        - 50
        - 66
        - 55
        - 52
        - 53
        - 65
        - 46
        - 52
        - 54
        - 67
        - 48
        - 50
        - 57
        - 68
        - 53
        - 46
        - 53
        - 67
        - 67
        - 56
        - 66
        - 54
        - 66
        - 50
        - 46
        - 49
        - 68
        - 56
        - 53
        - 68
        - 55
        - 51
        - 52
      ownerId: 0
      radius: 120
      teamId: -1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 7162
