crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_049.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214209
    entity_type: Vehicle
    position:
      x: 500
      y: 0
      z: 450.00018310546875
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 3
            - 8
            - 12
            - 17
            - 21
            - 23
            - 30
            - 63
          - - 3
            - 4
            - 12
            - 20
            - 23
            - 25
            - 60
            - 64
          - []
          - - 17
            - 20
            - 60
            - 74
            - 76
            - 78
            - 79
            - 82
        paramsId: 4293044016
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 67100
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 67100
      maxServerSpeedRaw: 909846
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214208
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 48
        - 183
        - 94
        - 255
        - 53
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 48
        - 47
        - 124
        - 198
        - 48
        - 175
        - 127
        - 198
        - 48
        - 47
        - 118
        - 198
        - 48
        - 175
        - 118
        - 198
        - 48
        - 175
        - 125
        - 198
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 2
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 50
        - 255
        - 176
        - 207
        - 130
        - 254
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 82
        - 251
        - 9
        - 0
        - 0
        - 0
        - 176
        - 111
        - 141
        - 255
        - 176
        - 111
        - 61
        - 255
        - 176
        - 111
        - 253
        - 254
        - 176
        - 111
        - 125
        - 255
        - 176
        - 239
        - 73
        - 243
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 237
        - 254
        - 176
        - 111
        - 221
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 82
        - 255
        - 176
        - 159
        - 242
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 2
        - 0
        - 0
        - 0
        - 176
        - 239
        - 173
        - 254
        - 176
        - 239
        - 157
        - 209
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 176
        - 239
        - 159
        - 254
        - 176
        - 239
        - 255
        - 253
        - 176
        - 239
        - 95
        - 253
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 16
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4607
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4607
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 499
    vehicle_id: 7162
